--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -27,10 +27,11 @@
     "no-var": "error",
     "comma-spacing": "error",
     "no-multi-spaces": "error",
-    "array-bracket-spacing": "error",
+    "array-bracket-spacing": ["error", "always"],
     "key-spacing": "error",
     "no-unused-vars": "off",
-    "indent": ["error", 2],  
+    "indent": ["error", 2],    
+    "object-curly-spacing": ["error", "always"],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/quotes": [ 2, "single", "avoid-escape" ]    
   }
