--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -31,7 +31,11 @@
     "key-spacing": "error",
     "no-unused-vars": "off",
     "indent": ["error", 2],    
-    "object-curly-spacing": ["error", "always"],
+    "object-curly-spacing": ["error", "always"],        
+    "padded-blocks": ["error", { "blocks": "never", "classes": "always", "switches": "never" }],
+    "space-before-blocks": "error",
+    "no-constant-condition": "off",
+    "eol-last": ["error", "always"],
     "@typescript-eslint/no-explicit-any": "off",
     "@typescript-eslint/quotes": [ 2, "single", "avoid-escape" ]    
   }
